--- a/SG2_Units/SG2_Interactive-House-Mobile/.env.example
+++ b/SG2_Units/SG2_Interactive-House-Mobile/.env.example
@@ -7,3 +7,4 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=
 EXPO_PUBLIC_FIREBASE_SENDER_ID=
 EXPO_PUBLIC_FIREBASE_APP_ID=
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=
+EXPO_PUBLIC_API_URL=
